# BusinessSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
assets/components/: stockItem.txt
assets/forms/: bottomBar.txt  bottomPanel.txt  emptyPage.txt  socialPage.txt  topPanel.txt
assets/game_data/: commodities.yaml  passel-events.yaml
code/: .syntastic_cpp_config  Game.cpp  demo.cpp  main.cpp
code/Application/: BusinessStrategy.cpp  GameDataLoader.cpp  GameLogic.cpp  Item.cpp  PageManager.cpp  PlayerStats.cpp  TestGame.cpp  UserInterface.cpp  WidgetFactory.cpp
code/Application/Controllers/: PlayerStatsController.cpp  StockItemController.cpp
code/Application/Market/: Item.cpp  PriceSimulator.cpp
code/Application/Price/: PriceSimulator.cpp
code/Application/States/: MainState.cpp  TestState.cpp
code/Application/Stock/: StockSimulator.cpp
code/Application/UserInterface/: PageManager.cpp  StockWidgetList.cpp  UINameTable.cpp  UserInterface.cpp
code/Application/Utility/: Random.cpp
code/Application/Widgets/: WidgetStack.cpp
code/Component/: Transform.cpp
code/Engine/: Engine.cpp  Game.cpp  GameState.cpp  GameStateManager.cpp
code/Entity/: TestBody.cpp
code/States/: State.cpp  TestState.cpp
code/System/: RenderSystem.cpp
concept/: concept.md
header/: Game.hpp
header/Application/: BusinessStrategy.hpp  GameDataLoader.hpp  GameLogic.hpp  GameSettings.hpp  Item.hpp  PageManager.hpp  PlayerStats.hpp  TestGame.hpp  UserInterface.hpp  WidgetFactory.hpp
header/Application/Controllers/: PlayerStatsController.hpp  StockItemController.hpp
header/Application/Market/: Commodity.hpp  CommodityData.hpp  EventGenerator.hpp  Item.hpp  MarketEvent.hpp  MarketItem.hpp  PriceSimulator.hpp
header/Application/Price/: MarketDetails.hpp  PriceQuote.hpp  PriceSimulator.hpp
header/Application/States/: MainState.hpp  TestState.hpp
header/Application/Stock/: StockQuote.hpp  StockSettings.hpp  StockSimulator.hpp
header/Application/UserInterface/: PageManager.hpp  StockWidgetList.hpp  UIComponentNames.hpp  UIFormPaths.hpp  UINameTable.hpp  UIResourceIds.hpp  UserInterface.hpp
header/Application/Utility/: Random.hpp
header/Application/Widgets/: WidgetStack.hpp
header/Component/: Transform.hpp
header/Engine/: Engine.hpp  Game.hpp  GameState.hpp  GameStateManager.hpp
header/Entity/: TestBody.hpp
header/States/: State.hpp  TestState.hpp
header/System/: RenderSystem.hpp
script/: makefile  run_make.sh
tests/: CMakeLists.txt  StockItemsListTest.cpp
